Update to mkobit plugin 0.11.0 (support Gradle 9.x, JDK 17+)
Just 7 years in the making: https://github.com/mkobit/jenkins-pipeline-shared-libraries-gradle-plugin/releases/tag/v0.11.0

Signed-off-by: Jim Klimov <jimklimov+nut@gmail.com>