@@ -1,31 +1,108 @@
 // Bits from https://github.com/mkobit/jenkins-pipeline-shared-library-example/blob/master/build.gradle.kts
-import com.mkobit.jenkins.pipelines.http.AnonymousAuthentication
+//import com.mkobit.jenkins.pipelines.http.AnonymousAuthentication
 import java.io.ByteArrayOutputStream
 
-plugins {
-    id ("groovy")
-    id ("java")
+import java.net.URL
 
-    // See https://docs.gradle.com/enterprise/gradle-plugin/#gradle_6_x_and_later
-    //id ("com.gradle.build-scan") version "2.3"
-    //id ("com.gradle.enterprise") version "3.7.2"
-
-    id ("com.mkobit.jenkins.pipelines.shared-library") version "0.10.1" apply true
-    id ("com.github.ben-manes.versions") version "0.21.0"
-
-    // https://discuss.gradle.org/t/unable-to-resolve-class-when-compiling-jenkins-groovy-script/28153/11
-    // https://github.com/mkobit/jenkins-pipeline-shared-libraries-gradle-plugin/issues/65
-    id ("org.jenkins-ci.jpi") version "0.51.0" apply false
-    //id ("org.jetbrains.kotlin.jvm") version "1.6.10-RC"
-    id ("org.jetbrains.kotlin.jvm") version "2.1.0-Beta1"
-
-    // https://github.com/JetBrains/gradle-idea-ext-plugin
-    id ("org.jetbrains.gradle.plugin.idea-ext") version "1.1.9" apply true
-}
+import org.gradle.api.plugins.JavaPlugin
+import org.gradle.api.plugins.jvm.JvmTestSuite
+import org.gradle.api.plugins.quality.CodeNarc
+import org.gradle.api.tasks.compile.GroovyCompile
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestStackTraceFilter
+import org.gradle.kotlin.dsl.invoke
+import org.gradle.api.tasks.wrapper.Wrapper
+import org.gradle.kotlin.dsl.named
 
 group "org.nut.dynamatrix"
 version "1.0-SNAPSHOT"
 
+plugins {
+    //id ("groovy")
+    //id ("java")
+
+    // Aliases are resolved via gradle/libs.versions.toml:
+    // id ("com.mkobit.jenkins.pipelines.shared-library") version "0.11.0" apply true
+    alias(libs.plugins.shared.library)
+
+    // Was useful when migrating to newer mkobit library release
+    // (see also the "rewrite" rule below):
+    //id("org.openrewrite.rewrite") version "6.26.0"
+    //alias(libs.plugins.openrewrite)
+
+    // Code styling and static analysis:
+//    alias(libs.plugins.spotless)
+//    codenarc
+
+    // (OLDER) See also https://docs.gradle.com/enterprise/gradle-plugin/#gradle_6_x_and_later
+    //id ("com.gradle.build-scan") version "2.3"
+    //id ("com.gradle.enterprise") version "3.7.2"
+
+    // Gradle plugin to discover dependency updates
+    // https://github.com/ben-manes/gradle-versions-plugin
+    //id ("com.github.ben-manes.versions") version "0.54.0"
+    alias(libs.plugins.ben.manes.versions)
+
+    // https://discuss.gradle.org/t/unable-to-resolve-class-when-compiling-jenkins-groovy-script/28153/11
+    // https://github.com/mkobit/jenkins-pipeline-shared-libraries-gradle-plugin/issues/65
+    //id ("org.jenkins-ci.jpi") version "0.51.0" apply false
+    //id ("org.jetbrains.kotlin.jvm") version "1.6.10-RC"
+    //id ("org.jetbrains.kotlin.jvm") version "2.1.0-Beta1"
+
+    //kotlin("jvm") version "2.3.21"
+    //kotlin("jvm") version libs.versions.kotlin
+    alias(libs.plugins.kotlin.jvm)
+
+    // https://github.com/JetBrains/gradle-idea-ext-plugin
+    //id ("org.jetbrains.gradle.plugin.idea-ext") version "1.1.9" apply true
+    //id ("org.jetbrains.gradle.plugin.idea-ext") version "1.4.1" apply true
+    alias(libs.plugins.idea.ext)
+}
+
+/*
+// Disabled when this is treated as a child project included into "jsl-site-config"
+// and not really needed after recipe migration to new mkobit library release
+rewrite {
+	activeRecipe("com.mkobit.jenkins.pipelines.MigrateSharedLibraryPlugin010To011")
+}
+*/
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+// https://github.com/mkobit/jenkins-pipeline-shared-library-example/blob/c37690649d10aa7cabdd534062bde5a5560ce852/build.gradle.kts
+val scriptsSourceSet =
+    sourceSets.create("scripts") {
+        groovy.setSrcDirs(listOf("scripts"))
+        java.setSrcDirs(emptyList<String>())
+        resources.setSrcDirs(emptyList<String>())
+    }
+tasks.named("compileScriptsGroovy") { enabled = false }
+
+val mainCompileOnly = configurations.named(JavaPlugin.COMPILE_ONLY_CONFIGURATION_NAME)
+val mainImplementation = configurations.named(JavaPlugin.IMPLEMENTATION_CONFIGURATION_NAME)
+configurations.named(scriptsSourceSet.compileOnlyConfigurationName) {
+    extendsFrom(mainCompileOnly, mainImplementation)
+}
+
+tasks.named("codenarcIntegrationTest") { enabled = false }
+tasks.named("codenarcJenkinsMain") { enabled = false }
+tasks.named("codenarcMain") { enabled = false }
+
+/*
+// https://github.com/mkobit/jenkins-pipeline-shared-library-example/blob/c37690649d10aa7cabdd534062bde5a5560ce852/build.gradle.kts
+codenarc {
+  toolVersion = libs.versions.codenarc.get()
+  configFile = file("config/codenarc/codenarc-src.xml")
+  reportFormat = "text"
+  sourceSets = sourceSets + listOf(scriptsSourceSet)
+}
+*/
+
+/*
 val commitSha: String by lazy {
     ByteArrayOutputStream().use {
         project.exec {
@@ -35,6 +112,7 @@ val commitSha: String by lazy {
         it.toString(Charsets.UTF_8.name()).trim()
     }
 }
+*/
 
 /*
 buildScan {
@@ -45,29 +123,10 @@ buildScan {
 }
 */
 
-java {
-    //sourceCompatibility = JavaVersion.VERSION_1_8
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
-}
-
-//noinspection JCenterRepository
-// https://blog.gradle.org/jcenter-shutdown says it will remain R/O
-repositories {
-    //jcenter()
-    mavenCentral()
-    maven (url = "https://plugins.gradle.org/m2/")
-
-    //maven (url = "https://repo.jenkins-ci.org/releases/")
-    maven (url = "https://repo.jenkins-ci.org/incrementals/")
-    // Mirror not served anymore // maven (url = "https://repo.jenkins-ci.org/public/")
-
-    // Note: this one reports "403 Forbidden" if an URL is bad -
-    // check spelling of the artifact (too few/many components etc.)
-    maven (url = "https://mvnrepository.com/artifact/")
-}
-
 dependencies {
+    implementation(libs.jakarta.servlet.api)
+
+/*
     // NOTE: https://stackoverflow.com/questions/65731542/why-is-there-no-kotlin-stdlib-jdk11
     implementation ("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 
@@ -100,9 +159,14 @@ dependencies {
 
     testImplementation ("org.junit.jupiter:junit-jupiter-api:5.11.2")
     testRuntimeOnly ("org.junit.jupiter:junit-jupiter-engine:5.11.2")
+ */
 
-    testImplementation ("com.mkobit.jenkins.pipelines:jenkins-pipeline-shared-libraries-gradle-plugin:0.10.1")
+/*
+    //testImplementation ("com.mkobit.jenkins.pipelines:jenkins-pipeline-shared-libraries-gradle-plugin:0.11.0")
+    jenkinsPlugin("org.jenkinsci.plugins:pipeline-model-definition")
+ */
 
+/*
     // https://mvnrepository.com/artifact/com.cloudbees/groovy-cps
     implementation ("com.cloudbees:groovy-cps:3964.v0767b_4b_a_0b_fa_")
     testImplementation ("com.cloudbees:groovy-cps:3964.v0767b_4b_a_0b_fa_")
@@ -135,6 +199,7 @@ dependencies {
     implementation ("org.jenkins-ci.plugins:git:5.1.0")
     implementation ("org.jenkins-ci.plugins:github-branch-source:1701.v00cc8184df93")
     testImplementation("org.assertj:assertj-core:3.12.2")
+*/
 /*
   val spock = "org.spockframework:spock-core:1.2-groovy-2.4"
   testImplementation(spock)
@@ -144,33 +209,63 @@ dependencies {
 }
 
 /*
-// https://github.com/mkobit/jenkins-pipeline-shared-libraries-gradle-plugin#configuring-versions
-sharedLibrary {
-    coreVersion = "2.303"
-    testHarnessVersion = "2.24"
-    pluginDependencies {
-        workflowCpsGlobalLibraryPluginVersion = "2.8"
-        dependency("io.jenkins.blueocean", "blueocean-web", "1.2.4")
-    }
-}
-*/
-
 jenkinsIntegration {
     // For builds with IntelliJ IDEA, may have to specify location of WAR
     // if "Could not initialize class org.jvnet.hudson.test.WarExploder"
     // and it says jenkins-core "is not in the expected location":
     //   -Djth.jenkins-war.path="C:\Users\klimov\.m2\repository\org\jenkins-ci\main\jenkins-war\2.387.1\jenkins-war-2.387.1.war"
+    // Hope for a predictable port we can keep open in a browser:
     baseUrl.set(uri("http://localhost:5050").toURL())
     authentication.set(providers.provider { AnonymousAuthentication })
     //downloadDirectory.set(layout.projectDirectory.dir("jenkinsResources"))
     downloadDirectory.set(layout.projectDirectory.dir("resources"))
 }
+*/
 
+// https://github.com/mkobit/jenkins-pipeline-shared-libraries-gradle-plugin#changing-the-jenkins-lts-line
 sharedLibrary {
-    // TODO: this will need to be altered when auto-mapping functionality is complete
-    coreVersion.set(jenkinsIntegration.downloadDirectory.file("core-version.txt").map { it.asFile.readText().trim() })
-    //coreVersion.set("2.303")
-    // TODO: retrieve downloaded plugin resource
+/*
+    jenkins {
+        // TODO: this will need to be altered when auto-mapping functionality is complete
+        //coreVersion.set(jenkinsIntegration.downloadDirectory.file("core-version.txt").map { it.asFile.readText().trim() })
+        //coreVersion.set("2.303")
+        // TODO: retrieve downloaded plugin resource
+
+        //version.set(jenkinsIntegration.downloadDirectory.file("core-version.txt").map { it.asFile.readText().trim() })
+        //version.set("2.303")
+        //bomVersion.set(jenkinsIntegration.downloadDirectory.file("bom-version.txt").map { it.asFile.readText().trim() })
+        version = "2.528.3"                         // Jenkins core version (default: 2.479.1)
+        bomVersion = "6398.v1d26a_dd495e2"          // BOM auto-injected into jenkinsPlugin
+    }
+
+    pipelineUnitVersion = "1.29"                    // JenkinsPipelineUnit version (test suite)
+    libraryName = "my-shared-lib"                   // Jenkins library name (default: project.name)
+    autoRegisterLibrary = true                      // generate SharedLibraryAutoRegistrar (default: true)
+
+    // OLD style examples:
+    //testHarnessVersion = "2.24" // Removed in 0.11.0 - now managed by the Jenkins BOM; to override, add implementation("org.jenkins-ci.main:jenkins-test-harness:VERSION") in the suite's `dependencies` block
+    pluginDependencies {
+        workflowCpsGlobalLibraryPluginVersion = "2.8"
+        dependency("io.jenkins.blueocean", "blueocean-web", "1.2.4")
+    }
+ */
+
+    jenkins {
+        version = "2.541.3"                         // Jenkins core version (default: 2.479.1)
+        bomVersion = "6398.v1d26a_dd495e2"          // BOM auto-injected into jenkinsPlugin
+    }
+
+    libraryName = "jenkins-dynamatrix"	        	// For @Library calls in test pipelines
+
+    // Default list of plugins and their versions defined in gradle/jenkins.versions.toml
+    // TODO: retrieve downloaded plugin resource from OUR production Jenkins
+    //  or some JCasC settings later; see resources/export-jenkins-catalog.groovy
+    plugins {
+        plugins(jenkinsPlugins.bundles.allPlugins)
+    }
+
+/*
+    // OLD list, for reference for now:
     pluginDependencies {
         dependency("org.jenkins-ci.plugins", "pipeline-build-step", "540.vb_e8849e1a_b_d8")
         dependency("org.6wind.jenkins", "lockable-resources", "1315.v4ea_8e5159ec8")
@@ -181,12 +276,15 @@ sharedLibrary {
         dependency("org.jenkinsci.plugins", "pipeline-model-api", declarativePluginsVersion)
         dependency("org.jenkins-ci.plugins.workflow", "workflow-step-api", "678.v3ee58b_469476")
         dependency("org.jenkins-ci.plugins.workflow", "workflow-cps", "3961.ve48ee2c44a_b_3")
+        dependency("org.jenkins-ci.plugins.workflow", "workflow-durable-task-step", "1464.v2d3f5c68f84c")
         dependency("org.jenkinsci.plugins", "pipeline-model-declarative-agent", "1.1.1")
         dependency("org.jenkinsci.plugins", "pipeline-model-definition", declarativePluginsVersion)
         dependency("org.jenkinsci.plugins", "pipeline-model-extensions", declarativePluginsVersion)
         // Jenkins Server startup in tests throws long noisy stack traces without these:
+        dependency("org.jenkins-ci.plugins", "git", "5.7.0")
         dependency("org.jenkins-ci.plugins", "git-client", "4.7.0")
         dependency("org.jenkins-ci.plugins", "git-server", "126.v0d945d8d2b_39")
+        dependency("org.jenkins-ci.plugins", "ssh-agent", "386.v36cc0c7582f0")
         dependency("org.jenkins-ci.modules", "sshd", "3.322.v159e91f6a_550")
         dependency("org.jenkins-ci.plugins", "http_request", "1.19")
 
@@ -202,7 +300,13 @@ sharedLibrary {
 
         // https://mvnrepository.com/artifact/org.jenkins-ci.main/jenkins-test-harness
         dependency ("org.jenkins-ci.main", "jenkins-test-harness", "2207.v3b_df04c801d4" /* "2289.vfd344a_6d1660" too new */)
+
+        // Make logs of test Jenkins instances a bit more readable if visited interactively
+        dependency("org.jenkins-ci.plugins", "antisamy-markup-formatter", "173.v680e3a_b_69ff3")
+        dependency("org.jenkins-ci.plugins", "ansicolor", "1.0.6")
+        dependency("org.jenkins-ci.plugins", "timestamper", "1.29")
     }
+ */
 }
 
 // http://tdongsi.github.io/blog/2018/02/09/intellij-setup-for-jenkins-shared-library-development/
@@ -240,6 +344,149 @@ sourceSets {
 }
 */
 
+/*
+// https://github.com/mkobit/jenkins-pipeline-shared-library-example/blob/c37690649d10aa7cabdd534062bde5a5560ce852/build.gradle.kts
+tasks.named<CodeNarc>("codenarcScripts") {
+  config = resources.text.fromFile("config/codenarc/codenarc-scripts.xml")
+}
+*/
+
+/*
+spotless {
+  groovy {
+    greclipse().configFile("config/greclipse.properties")
+    target("src/**/*.groovy", "vars/**/*.groovy", "test/**/*.groovy", "scripts/**/*.groovy")
+  }
+  java {
+    googleJavaFormat()
+    target("test/**/*.java")
+  }
+  kotlin {
+    ktlint()
+    target("test/**/*.kt")
+  }
+  kotlinGradle {
+    ktlint()
+    target("*.gradle.kts")
+  }
+  toml {
+    versionCatalog()
+    target("gradle/libs.versions.toml")
+  }
+}
+*/
+
+// https://github.com/mkobit/jenkins-pipeline-shared-library-example/blob/c37690649d10aa7cabdd534062bde5a5560ce852/build.gradle.kts
+val kotestParallelism =
+    providers
+        .gradleProperty("kotest.parallelism")
+        .map { it.toInt() }
+        .orElse(Runtime.getRuntime().availableProcessors())
+
+testing {
+    suites {
+        named<JvmTestSuite>("test") {
+            useJUnitJupiter(libs.versions.junit.jupiter)
+            sources {
+                java.srcDirs("test/unit/java")
+                groovy.srcDirs("test/unit/groovy")
+                kotlin.srcDirs("test/unit/kotlin")
+            }
+            dependencies {
+                implementation(libs.spock.core)
+                implementation(libs.assertj)
+                implementation(libs.kotest.engine)
+                runtimeOnly(libs.kotest.runner)
+                implementation(libs.kotest.assertions)
+                implementation(libs.kotest.decoroutinator)
+                implementation(libs.jenkins.pipeline.unit)
+            }
+        }
+    }
+}
+
+val integrationTestJunit =
+    testing.suites.register<JvmTestSuite>("integrationTestJunit") {
+        sharedLibrary.withJenkins(this)
+        sources {
+            java.setSrcDirs(listOf("test/integration-junit/java"))
+            //groovy.setSrcDirs(listOf("test/integration-junit/groovy"))
+            groovy.srcDirs("test/integration-junit/groovy")
+        }
+        dependencies {
+            // Borrowing Groovy classpath from Spock, which must have it:
+            compileOnly(libs.spock.core)
+            implementation(libs.junit.jupiter.api)
+            runtimeOnly(libs.junit.jupiter.engine)
+            runtimeOnly(libs.junit.platform.launcher)
+
+            // ADD THESE to support JUnit 4 tests for now:
+            runtimeOnly(libs.junit.vintage.engine)
+
+            // FIX: Missing libraries that cause Jenkins noise and initialization failures:
+            //runtimeOnly("org.jenkins-ci.main:jenkins-core:${sharedLibrary.jenkins.version}")
+            runtimeOnly("commons-discovery:commons-discovery:0.5")
+            runtimeOnly("org.slf4j:slf4j-simple:2.0.16")
+            runtimeOnly(jenkinsPlugins.bouncycastle.api)
+            runtimeOnly(jenkinsPlugins.display.url.api)
+            runtimeOnly(jenkinsPlugins.scm.api)
+            runtimeOnly(jenkinsPlugins.workflow.step.api)
+            runtimeOnly(jenkinsPlugins.workflow.support)
+            runtimeOnly(jenkinsPlugins.workflow.api)
+            runtimeOnly(jenkinsPlugins.workflow.basic.steps)
+            runtimeOnly(jenkinsPlugins.workflow.cps)
+            runtimeOnly(jenkinsPlugins.workflow.job)
+            runtimeOnly(jenkinsPlugins.workflow.durable.task.step)
+            runtimeOnly(jenkinsPlugins.durable.task)
+            runtimeOnly(jenkinsPlugins.workflow.scm.step)
+            runtimeOnly(jenkinsPlugins.junit)
+            runtimeOnly(jenkinsPlugins.matrix.project)
+            runtimeOnly(jenkinsPlugins.branch.api)
+            runtimeOnly(jenkinsPlugins.cloudbees.folder)
+            runtimeOnly(jenkinsPlugins.structs)
+            runtimeOnly(jenkinsPlugins.script.security)
+            runtimeOnly(jenkinsPlugins.pipeline.model.definition)
+            runtimeOnly(jenkinsPlugins.credentials)
+        }
+        targets.all {
+            testTask.configure {
+                useJUnitPlatform()
+            }
+        }
+    }
+
+val integrationTestSpock =
+    testing.suites.register<JvmTestSuite>("integrationTestSpock") {
+        sharedLibrary.withJenkins(this)
+        sources {
+            groovy.setSrcDirs(listOf("test/integration-spock/groovy"))
+        }
+        dependencies {
+            implementation(libs.spock.core)
+        }
+    }
+
+val integrationTestKotest =
+    testing.suites.register<JvmTestSuite>("integrationTestKotest") {
+        sharedLibrary.withJenkins(this)
+        useJUnitJupiter(libs.versions.junit.jupiter)
+        sources {
+            kotlin.setSrcDirs(listOf("test/integration-kotest/kotlin"))
+        }
+        dependencies {
+            implementation(libs.kotest.engine)
+            runtimeOnly(libs.kotest.runner)
+            implementation(libs.kotest.assertions)
+            implementation(libs.kotest.decoroutinator)
+            implementation(libs.coroutines.core)
+        }
+        targets.all {
+            testTask.configure {
+                systemProperty("kotest.framework.parallelism", kotestParallelism)
+            }
+        }
+    }
+
 // https://github.com/JetBrains/gradle-idea-ext-plugin/issues/114
 fun org.gradle.plugins.ide.idea.model.IdeaModule.settings(configure: org.jetbrains.gradle.ext.ModuleSettings.() -> Unit) =
     (this as ExtensionAware).configure(configure)
@@ -250,57 +497,82 @@ val org.jetbrains.gradle.ext.ModuleSettings.packagePrefix: org.jetbrains.gradle.
 idea {
     module {
         settings {
+            packagePrefix["src"]  = "org.nut.dynamatrix"
             packagePrefix["vars"] = "org.nut.dynamatrix"
         }
+
+        // Ensure IDEA recognizes Groovy
+        isDownloadSources = true
+        isDownloadJavadoc = true
     }
 }
 
 // https://github.com/mkobit/jenkins-pipeline-shared-libraries-gradle-plugin/issues/69
 tasks {
     wrapper {
-        //gradleVersion = "5.5.1"
-        //gradleVersion = "7.2"
-        //gradleVersion = "7.1"
-        gradleVersion = "8.8"
+        gradleVersion = "9.4.1"
+        distributionType = Wrapper.DistributionType.ALL
     }
 
-    test {
-        useJUnitPlatform()
-        // https://stackoverflow.com/a/52745454/4715872
-        minHeapSize = "128m" // initial heap size
-        maxHeapSize = "4096m" // maximum heap size
-        jvmArgs = listOf("-XX:MaxPermSize=256m") // mem argument for the test JVM
+    withType<AbstractTestTask>().configureEach {
+        failOnNoDiscoveredTests = false
     }
 
-    compileGroovy {
-        groovyOptions.configurationScript = file("resources/compiler-config.groovy")
-        groovyOptions.forkOptions.jvmArgs = listOf("-Xms128m", "-Xmx4g") //, "-XX:MaxPermSize=256m") // Unrecognized VM option 'MaxPermSize=256m'
-    }
-
-    // https://github.com/mkobit/jenkins-pipeline-shared-libraries-gradle-plugin/issues/65
-    register<org.jenkinsci.gradle.plugins.jpi.TestDependenciesTask>("resolveIntegrationTestDependencies") {
-        into {
-            val javaConvention = project.convention.getPlugin<JavaPluginConvention>()
-            File("${javaConvention.sourceSets.integrationTest.get().output.resourcesDir}/test-dependencies")
-        }
-        configuration = configurations.integrationTestRuntimeClasspath.get()
-    }
-    processIntegrationTestResources {
-        dependsOn("resolveIntegrationTestDependencies")
-    }
-
-    compileKotlin {
-        kotlinOptions {
-            //jvmTarget = "1.8"
-            //jvmTarget = "11"
-            jvmTarget = "21"
+    withType<Test>().configureEach {
+        systemProperty("kotest.framework.config.fqn", "testsupport.kotest.ProjectConfig")
+        maxParallelForks = 1
+        testLogging {
+            events("failed", "skipped")
+            showExceptions = true
+            showCauses = true
+            showStackTraces = true
+            exceptionFormat = TestExceptionFormat.FULL
+            stackTraceFilters = setOf(TestStackTraceFilter.TRUNCATE)
         }
     }
-    compileTestKotlin {
-        kotlinOptions {
-            //jvmTarget = "1.8"
-            //jvmTarget = "11"
-            jvmTarget = "21"
-        }
+
+    named<GroovyCompile>("compileIntegrationTestGroovy") {
+        groovyClasspath = configurations.getByName("integrationTestSpockCompileClasspath")
+    }
+
+    named<GroovyCompile>("compileIntegrationTestJunitGroovy") {
+        // Borrowing Groovy classpath from Spock, which must have it:
+        groovyClasspath = configurations.getByName("integrationTestSpockCompileClasspath")
+    }
+
+    named<GroovyCompile>("compileIntegrationTestSpockGroovy") {
+        groovyClasspath = configurations.getByName("integrationTestSpockCompileClasspath")
+    }
+
+    check {
+        dependsOn(integrationTestJunit, integrationTestSpock, integrationTestKotest)
     }
 }
+
+/*
+spotless {
+  groovy {
+    greclipse().configFile("config/greclipse.properties")
+    target("src/**/*.groovy", "vars/**/*.groovy", "test/**/*.groovy", "scripts/**/*.groovy")
+  }
+  java {
+    googleJavaFormat()
+    target("test/**/*.java")
+  }
+  kotlin {
+    ktlint()
+    target("test/**/*.kt")
+  }
+  kotlinGradle {
+    ktlint()
+    target("*.gradle.kts")
+  }
+  toml {
+    versionCatalog()
+    target("gradle/libs.versions.toml")
+  }
+}
+*/
+
+tasks.named("codenarcIntegrationTestJunit") { enabled = false }
+tasks.named("codenarcIntegrationTestSpock") { enabled = false }
